# tts

./: .gitignore  CLAUDE.md  README.md  build.sh  doover_config.json  pyproject.toml
simulators/sample/: main.py  pyproject.toml
src/g62/: __init__.py  app_config.py  app_tags.py  app_ui.py  application.py  decoder.py
src/integration/: __init__.py  app_config.py  application.py
src/processor/: __init__.py  app_config.py  app_tags.py  app_ui.py  application.py
src/rak4631/: __init__.py  app_config.py  app_tags.py  app_ui.py  application.py  decoder.py
src/tts/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py
tests/: test_imports.py
