[project]
name = "tts-connector"
version = "0.1.0"
description = "Doover integration for LoRaWAN devices via The Things Stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover==1.0.0a7",
]

[project.scripts]
export-config-integration = "integration.app_config:export"
export-config-processor = "processor.app_config:export"
export-ui-processor = "processor.app_ui:export"
export-config-g62 = "g62.app_config:export"
export-ui-g62 = "g62.app_ui:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integration", "src/processor", "src/g62"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
